# ogl

./: CMakeLists.txt
.github/workflows/: cmake.yml
src/: main.cpp
